# i2c_sniffer_gui_nau7802

./: CMakeLists.txt  README.md  ftdireader.cpp  ftdireader.h  mainwindow.cpp  mainwindow.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: windows-build.yaml
